stretch flexbox fix

--- a/style.sass
+++ b/style.sass
@@ -66,6 +66,7 @@ h2
   display: flex
   justify-content: center
   margin-top: 75px
+  align-items: flex-start
 
 a
   color: white
